--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anna Sapon | Ателье индивидуального пошива в Москве</title>
-    <meta name="description" content="Вечерние и свадебные платья от дизайнера Анны Сапон. Индивидуальный пошив, уникальный дизайн, безупречный крой. Запишитесь на консультацию.">
+    <meta name="description" content="Уникальная дизайнерская одежда от Анны Сапон. Индивидуальный пошив, авторский дизайн, безупречный крой. Запишитесь на консультацию.">
 
     <!-- Fonts - Luxury Ultra-thin -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,7 +60,7 @@
         <div class="hero__content">
             <span class="hero__brand">Anna Sapon</span>
             <h1 class="hero__title">Искусство индивидуального<br>пошива в Москве</h1>
-            <p class="hero__description">Вечерние и свадебные платья, созданные для вас</p>
+            <p class="hero__description">Уникальная одежда, созданная специально для вас</p>
             <a href="#contact" class="btn btn--primary btn--large">Записаться на консультацию</a>
         </div>
         <a href="#process" class="hero__scroll">
@@ -75,7 +75,7 @@
     <section class="process" id="process">
         <div class="container">
             <span class="section-label">Наш подход</span>
-            <h2 class="section-title">Путь к идеальному платью</h2>
+            <h2 class="section-title">Путь к идеальному образу</h2>
             <div class="process__grid">
                 <div class="process__item">
                     <span class="process__number">01</span>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="process__item">
                     <span class="process__number">03</span>
-                    <h3 class="process__title">Пошив</h3>
+                    <h3 class="process__title">Создание</h3>
                     <p class="process__text">Работа с лучшими тканями и внимание к деталям</p>
                 </div>
                 <div class="process__item">
@@ -139,10 +139,10 @@
             <p class="about__subtitle">Дизайнер, основатель ателье</p>
             <div class="about__divider"></div>
             <p class="about__text">
-                Более 15 лет я создаю платья, которые подчёркивают индивидуальность каждой женщины. Каждый силуэт — это история, рассказанная через ткань, крой и детали.
+                Более 15 лет я создаю одежду, которая подчёркивает индивидуальность каждой женщины. Каждый силуэт — это история, рассказанная через ткань, крой и детали.
             </p>
             <p class="about__text">
-                Мой подход — это внимание к каждой детали, понимание женской фигуры и стремление создать не просто платье, а произведение искусства.
+                Мой подход — это внимание к каждой детали, понимание женской фигуры и стремление создать не просто одежду, а произведение искусства.
             </p>
             <a href="#contact" class="btn btn--secondary">Связаться со мной</a>
         </div>
@@ -156,7 +156,7 @@
         <div class="container">
             <span class="section-label">Процесс</span>
             <h2 class="section-title">От идеи к образу</h2>
-            <p class="section-subtitle">Каждое платье начинается с эскиза</p>
+            <p class="section-subtitle">Каждый образ начинается с эскиза</p>
             <div class="atelier__showcase">
                 <div class="atelier__row">
                     <div class="atelier__pair">
@@ -237,10 +237,14 @@
                 <div class="gallery__item clickable-image"><img src="Fashion_models_Sapon_Anna/Fashion_model_5-1.jpg" alt="Anna Sapon Collection"></div>
                 <div class="gallery__item clickable-image"><img src="Fashion_models_Sapon_Anna/Fashion_model_6-1.jpg" alt="Anna Sapon Collection"></div>
                 <div class="gallery__item clickable-image"><img src="Fashion_models_Sapon_Anna/Fashion_model_7-1.jpg" alt="Anna Sapon Collection"></div>
-                <div class="gallery__item clickable-image"><img src="Wedding_dress_Sapon_Anna/Wedding_dress_Sapon_Anna_1-2.jpg" alt="Anna Sapon Wedding"></div>
                 <div class="gallery__item clickable-image"><img src="Fashion_models_Sapon_Anna/Fashion_model_8-1.jpg" alt="Anna Sapon Collection"></div>
                 <div class="gallery__item clickable-image"><img src="Fashion_models_Sapon_Anna/Fashion_model_9-1.jpg" alt="Anna Sapon Collection"></div>
+                <div class="gallery__item clickable-image"><img src="Wedding_dress_Sapon_Anna/Wedding_dress_Sapon_Anna_1-2.jpg" alt="Anna Sapon Wedding"></div>
                 <div class="gallery__item clickable-image"><img src="Wedding_dress_Sapon_Anna/Wedding_dress_Sapon_Anna_2-1.jpg" alt="Anna Sapon Wedding"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design8-1New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design8-2New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design9-1New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design9-2New_real_model.jpg" alt="Anna Sapon Design"></div>
             </div>
         </div>
     </section>
@@ -253,18 +257,18 @@
             <div class="testimonials__grid">
                 <div class="testimonials__item">
                     <div class="testimonials__quote">&ldquo;</div>
-                    <p class="testimonials__text">Анна создала платье моей мечты. Каждая деталь продумана до совершенства. Я чувствовала себя королевой в свой особенный день.</p>
+                    <p class="testimonials__text">Анна создала образ моей мечты. Каждая деталь продумана до совершенства. Я чувствовала себя королевой в свой особенный день.</p>
                     <div class="testimonials__author">
                         <span class="testimonials__name">Елена М.</span>
-                        <span class="testimonials__role">Свадебное платье</span>
+                        <span class="testimonials__role">Индивидуальный пошив</span>
                     </div>
                 </div>
                 <div class="testimonials__item">
                     <div class="testimonials__quote">&ldquo;</div>
-                    <p class="testimonials__text">Профессионализм высочайшего уровня. Платье село идеально, учтены все пожелания. Рекомендую всем, кто ценит качество.</p>
+                    <p class="testimonials__text">Профессионализм высочайшего уровня. Всё село идеально, учтены все пожелания. Рекомендую всем, кто ценит качество.</p>
                     <div class="testimonials__author">
                         <span class="testimonials__name">Мария К.</span>
-                        <span class="testimonials__role">Вечернее платье</span>
+                        <span class="testimonials__role">Авторский дизайн</span>
                     </div>
                 </div>
                 <div class="testimonials__item">
@@ -272,7 +276,7 @@
                     <p class="testimonials__text">Это был незабываемый опыт — от первой консультации до финальной примерки. Анна понимает женщин как никто другой.</p>
                     <div class="testimonials__author">
                         <span class="testimonials__name">Анастасия В.</span>
-                        <span class="testimonials__role">Вечернее платье</span>
+                        <span class="testimonials__role">Уникальный образ</span>
                     </div>
                 </div>
             </div>
@@ -299,14 +303,15 @@
                     <label for="interest">Интересует</label>
                     <select id="interest" name="interest">
                         <option value="">Выберите категорию</option>
-                        <option value="evening">Вечернее платье</option>
-                        <option value="wedding">Свадебное платье</option>
+                        <option value="dress">Платье</option>
+                        <option value="suit">Костюм</option>
+                        <option value="casual">Повседневная одежда</option>
                         <option value="other">Другое</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="message">Сообщение</label>
-                    <textarea id="message" name="message" rows="4" placeholder="Расскажите о вашем видении идеального платья"></textarea>
+                    <textarea id="message" name="message" rows="4" placeholder="Расскажите о вашем видении идеального образа"></textarea>
                 </div>
                 <button type="submit" class="btn btn--primary btn--full">Отправить заявку</button>
             </form>
