--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     </div>
                     <div class="form-group">
                         <label for="phone">Телефон</label>
-                        <input type="tel" id="phone" name="phone" required placeholder="+7 (___) ___-__-__">
+                        <input type="tel" id="phone" name="phone" required placeholder="+1 234 567 8900" pattern="[\+]?[0-9\s\-\(\)]{7,20}">
                     </div>
                 </div>
                 <div class="form-group">
