--- a/index.html
+++ b/index.html
@@ -245,6 +245,16 @@
                 <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design8-2New_real_model.jpg" alt="Anna Sapon Design"></div>
                 <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design9-1New_real_model.jpg" alt="Anna Sapon Design"></div>
                 <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design9-2New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design10-1New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design10-2New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design10-3New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design11-1New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design11-2New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design11-3New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design11-4New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design11-5New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design12-1New_real_model.jpg" alt="Anna Sapon Design"></div>
+                <div class="gallery__item clickable-image"><img src="Sapon_idea_design_ready_model/Design12-2New_real_model.jpg" alt="Anna Sapon Design"></div>
             </div>
         </div>
     </section>
