--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 <div class="contact__info-items">
                     <div class="contact__info-item">
                         <span class="contact__info-label">Адрес</span>
-                        <p>Москва, ул. Пречистенка, 10</p>
+                        <p>Москва, 2-ой Верхний Михайловский пр. 5</p>
                     </div>
                     <div class="contact__info-item">
                         <span class="contact__info-label">Телефон</span>
