--- a/index.html
+++ b/index.html
@@ -344,22 +344,21 @@
                     </div>
                 </div>
                 <div class="contact__social">
-                    <a href="#" class="contact__social-link" aria-label="Instagram">
+                    <a href="https://www.instagram.com/anna_sapon_designer/" target="_blank" class="contact__social-link" aria-label="Instagram">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
                             <rect x="2" y="2" width="20" height="20" rx="5" stroke="currentColor" stroke-width="1.5"/>
                             <circle cx="12" cy="12" r="4" stroke="currentColor" stroke-width="1.5"/>
                             <circle cx="18" cy="6" r="1" fill="currentColor"/>
                         </svg>
                     </a>
-                    <a href="#" class="contact__social-link" aria-label="Telegram">
+                    <a href="https://t.me/annsapon" target="_blank" class="contact__social-link" aria-label="Telegram">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
                             <path d="M21 5L10 13M21 5L14 21L10 13M21 5L3 11L10 13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                     </a>
-                    <a href="#" class="contact__social-link" aria-label="WhatsApp">
+                    <a href="https://wa.me/79854165011" target="_blank" class="contact__social-link" aria-label="WhatsApp">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
                             <path d="M3 21L4.5 15.5C3.5 13.5 3.5 11 4.5 9C6.5 5 11 3 15.5 4.5C19 6 21 9.5 21 13C21 17.5 17.5 21 13 21C11 21 9 20.5 7.5 19.5L3 21Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
                     </a>
                 </div>
             </div>
@@ -383,9 +382,9 @@
             <div class="footer__bottom">
                 <p class="footer__copyright">&copy; 2024 Anna Sapon. Все права защищены.</p>
                 <div class="footer__social">
-                    <a href="#">Instagram</a>
-                    <a href="#">Telegram</a>
-                    <a href="#">WhatsApp</a>
+                    <a href="https://www.instagram.com/anna_sapon_designer/" target="_blank">Instagram</a>
+                    <a href="https://t.me/annsapon" target="_blank">Telegram</a>
+                    <a href="https://wa.me/79854165011" target="_blank">WhatsApp</a>
                 </div>
             </div>
         </div>
