--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     </div>
                     <div class="form-group">
                         <label for="phone">Телефон</label>
-                        <input type="tel" id="phone" name="phone" required placeholder="+1 234 567 8900" pattern="[\+]?[0-9\s\-\(\)]{7,20}">
+                        <input type="tel" id="phone" name="phone" required placeholder="+1 234 567 8900" pattern="[\+]?[0-9\s\-\(\)]{7,25}">
                     </div>
                 </div>
                 <div class="form-group">
@@ -413,6 +413,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2"></script>
 </body>
 </html>
